# packaging_and_distributing_pyton

./: 0_discussion_and_definations.ipynb  1_configuring_metadata.ipynb  2_generating_distribution_archives.ipynb  LICENSE  pyproject.toml
